--- a/src/pages/Admin/Dashboard/CourseManagement/CourseMangement.module.css
+++ b/src/pages/Admin/Dashboard/CourseManagement/CourseMangement.module.css
@@ -254,3 +254,23 @@
 .closeButton:hover {
   background-color: #d32f2f;
 }
+.checkboxGroup {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  max-height: 200px;
+  overflow-y: auto;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+  padding: 10px;
+}
+
+.checkboxLabel {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.checkbox {
+  margin-right: 5px;
+}
