--- a/src/pages/Admin/Dashboard/PackageManagement/PackageManagement.module.css
+++ b/src/pages/Admin/Dashboard/PackageManagement/PackageManagement.module.css
@@ -190,7 +190,24 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.addButton {
+  background-color: white;
+  border: 2px solid #4CAF50;
+  color: #4CAF50;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.9rem;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
 
+.addButton:hover {
+  background-color: #4CAF50;
+  color: white;
+}
 .checkboxLabel span {
   flex-grow: 1;
 }
