--- a/src/pages/Admin/Dashboard/RegistrationManagement/RegistrationManagement.module.css
+++ b/src/pages/Admin/Dashboard/RegistrationManagement/RegistrationManagement.module.css
@@ -24,10 +24,28 @@
   font-size: 1.5rem;
   color: #444;
   margin-bottom: 15px;
-  border-bottom: 2px solid #1890ff;
   padding-bottom: 5px;
 }
+.viewRegistersButton {
+  padding: 0.5rem 1rem;
+  border: 2px solid #4CAF50; /* Green border */
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  background-color: white; /* White background initially */
+  color: #4CAF50; /* Green text */
+}
 
+.viewRegistersButton:hover {
+  background-color: #4CAF50; /* Green background on hover */
+  color: white; /* White text on hover */
+}
+
+.viewRegistersButton.hide {
+  background-color: white; /* White background when hiding */
+  color: #4CAF50; /* Green text when hiding */
+}
 .registrationList {
   list-style-type: none;
   padding: 0;
@@ -60,21 +78,21 @@
 }
 
 .viewButton {
-  padding: 8px 16px;
-  background-color: #1890ff;
-  color: white;
-  border: none;
+  padding: 0.5rem 1rem;
+  border: 2px solid;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 0.9rem;
   font-weight: bold;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease;
+  background-color: white;
+  color: #2196F3; 
+  border-color: #2196F3; 
 }
 
 .viewButton:hover {
-  background-color: #40a9ff;
+  background-color: #2196F3; 
+  color: white; 
 }
-
 .detailsSection {
   background-color: white;
   border: 1px solid #ddd;
