--- a/src/pages/Admin/Signup/Signup.module.css
+++ b/src/pages/Admin/Signup/Signup.module.css
@@ -1,4 +1,4 @@
-.signupContainer {
+/* .signupContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,4 +82,4 @@ h2 {
 
 .loginLink a:hover {
   text-decoration: underline;
-}
+} */
