--- a/src/pages/Admin/Dashboard/RegistrationManagement/RegistrationManagement.module.css
+++ b/src/pages/Admin/Dashboard/RegistrationManagement/RegistrationManagement.module.css
@@ -28,23 +28,23 @@
 }
 .viewRegistersButton {
   padding: 0.5rem 1rem;
-  border: 2px solid #4CAF50; /* Green border */
+  border: 2px solid #4CAF50; 
   border-radius: 4px;
   cursor: pointer;
   font-weight: bold;
   transition: all 0.3s ease;
-  background-color: white; /* White background initially */
-  color: #4CAF50; /* Green text */
+  background-color: white; 
+  color: #4CAF50; 
 }
 
 .viewRegistersButton:hover {
-  background-color: #4CAF50; /* Green background on hover */
-  color: white; /* White text on hover */
+  background-color: #4CAF50; 
+  color: white; 
 }
 
 .viewRegistersButton.hide {
-  background-color: white; /* White background when hiding */
-  color: #4CAF50; /* Green text when hiding */
+  background-color: white; 
+  color: #4CAF50; 
 }
 .registrationList {
   list-style-type: none;
